--- a/src/data/restart.html
+++ b/src/data/restart.html
@@ -3,7 +3,7 @@
 <!-- BEGIN HEAD-->
 <head>
     <meta charset="UTF-8" />
-    <title>Admin tools | Device</title>
+    <title>Admin tools | Reiniciar</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="description" />
     <meta content="" name="author" />
@@ -90,7 +90,7 @@
                         <i class="icon-sitemap"></i> MQTT
                     </a>
                 </li>
-                <li class="panel active">
+                <li class="panel">
                     <a href="#" data-parent="#menu" data-toggle="collapse" class="accordion-toggle" data-target="#component-nav">
                         <i class="icon-cog"> </i> Administrar
                         <span class="pull-right">
@@ -118,7 +118,7 @@
             <div class="inner" style="min-height:1200px;">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h2>Informacion del dispositivo</h2>
+                        <h2>Reiniciar</h2>
                     </div>
                 </div>
                 <hr>
@@ -127,30 +127,13 @@
                 <div class="col-lg-12">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
-                            <i class="icon-info-sign"></i>Dispositivo
+                            <i class="icon-spinner"></i>Dar click en el siguiente boton para Reiniciar el Dispositivo
                         </div>
                         <div class=" panel-body ">
                           <br>
-                            <form class="form-horizontal">
-                              <div class="form-group">
-                                <label for="serie" class="control-label col-lg-3">Numero de serie</label>
-                                <div class="col-lg-5">
-                                  <input type="text" id="serie" value="#serie#" readonly class="form-control">
-                                </div>
-                              </div>
-                              <div class="form-group" id="form_id">
-                                <label for="id" class="control-label col-lg-3">Identificacion del Dispositivo</label>
-                                <div class="col-lg-5">
-                                  <input type="text" id="id" name="id" value="#id#" placeholder="Identificacion del Dispositivo" class="form-control">
-                                </div>
-                              </div>
-                              <div class="form-group">
-                              <label for="#" class="control-label col-lg-3"></label>
-                              <div class="col-lg-5">
-                                <button class="btn btn-primary" type="submit"><i class="icon-save icon-white"></i>Guardar</button>
-                              </div>
-                              </div>
-                            </form>
+                            <button class="btn btn-warning btn-lg" id="btn">
+                              <i class="icon-spinner icon-white"></i>Reiniciar
+                            </button>
                         </div>
                     </div>
                 </div>
