--- a/src/data/admin.html
+++ b/src/data/admin.html
@@ -118,7 +118,7 @@
             <div class="inner" style="min-height:1200px;">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h2>Admin</h2>
+                        <h2>Usuario y contraseña</h2>
                     </div>
                 </div>
                 <hr>
@@ -127,11 +127,49 @@
                 <div class="col-lg-12">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
-                            <i class="icon-spinner"></i>Dar click en el siguiente boton para Reiniciar el Dispositivo
+                            <i class="icon-lock"></i>El nombre de Usuario y la contraseña pueden contener entre 4-15 caracteres y no pueden incluir espacios
                         </div>
                         <div class=" panel-body ">
                           <br>
-                            
+                            <form class="form-horizontal">
+                                <div class="form-group" id="form_www_username">
+                                    <label for="www_username" class="control-label col-lg-3">Nombre de Usuario Anterior</label>
+                                    <div class="col-lg-5">
+                                        <input type="text" id="www_username" name="www_username" placeholder="Nombre de Usuario Anterior" class="form-control"/>
+                                    </div>
+                                </div>
+                                <div class="form-group" id="form_www_pasword">
+                                    <label for="www_pasword" class="control-label col-lg-3">Contraseña Anterior</label>
+                                    <div class="col-lg-5">
+                                        <input type="password" id="www_pasword" name="www_pasword" placeholder="Contraseña Anterior" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="form-group" id="form_new_www_username">
+                                    <label for="new_www_username" class="control-label col-lg-3">Nombre de Usuario Nuevo</label>
+                                    <div class="col-lg-5">
+                                        <input type="text" id="new_www_username" name="new_www_username" placeholder="Nombre de Usuario Nuevo" class="form-control"/>
+                                    </div>
+                                </div>
+                                <div class="form-group" id="form_new_www_pasword">
+                                    <label for="new_www_pasword" class="control-label col-lg-3">Contraseña Nueva</label>
+                                    <div class="col-lg-5">
+                                        <input type="password" id="new_www_pasword" name="new_www_pasword" placeholder="Contraseña Nueva" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="form-group" id="form_c_new_www_pasword">
+                                    <label for="c_new_www_pasword" class="control-label col-lg-3">Confirmar la Contraseña Nueva</label>
+                                    <div class="col-lg-5">
+                                        <input type="password" id="c_new_www_pasword" name="c_new_www_pasword" placeholder="Confirmar la Contraseña Nueva" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="#" class="control-label col-lg-3"></label>
+                                    <div class="col-lg-5">
+                                        <button class="btn btn-primary" type="submit"><i class="icon-save icon-white"></i>Guardar</button>
+                                        <button class="btn btn-info" type="button"><i class="icon-eraser icon-white"></i>Limpiar todo</button>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
